reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_rename_num.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::enums::Nums"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::enums::Nums"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::Nums",
        "variants": [
          {
            "name": "Zero",
            "serde_name": "0",
            "fields": "none"
          },
          {
            "name": "A",
            "fields": "none"
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::Nums",
        "variants": [
          {
            "name": "Zero",
            "serde_name": "0",
            "fields": "none"
          },
          {
            "name": "A",
            "fields": "none"
          }
        ]
      }
    ]
  }
}
