reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_basic_variant_and_fields_and_named_fields-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_python_code :: <\nTestEnumWithBasicVariantAndFieldsAndNamedFields > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Helper functions for externally tagged enum serialization/deserialization
def _parse_externally_tagged(data, variants: dict, types: tuple, enum_name: str):
    """Parse an externally tagged enum from {key: value} format."""
    if types and isinstance(data, types):
        return data
    if isinstance(data, str) and data in variants:
        handler = variants[data]
        if handler == "_unit":
            return data
    if isinstance(data, dict):
        if len(data) != 1:
            raise ValueError("Externally tagged enum must have exactly one key")
        key, value = next(iter(data.items()))
        if key in variants:
            handler = variants[key]
            if handler == "_unit":
                return key
            return handler(value)
    raise ValueError(f"Unknown variant for {enum_name}: {data}")


def _serialize_externally_tagged(root, serializers: dict, enum_name: str):
    """Serialize an externally tagged enum to {key: value} format."""
    for variant_name, (check, serialize) in serializers.items():
        if check(root):
            return serialize(root)
    raise ValueError(f"Cannot serialize {enum_name} variant: {type(root)}")


class ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant(
    BaseModel
):
    """Variant1 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: int
    field_1: str


class ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant(
    BaseModel
):
    """Variant2 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field1: int
    field2: str


# Externally tagged enum using RootModel
ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariants = Union[
    Literal["Variant0"],
    ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant,
    ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant,
]


class ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFields(
    RootModel[
        ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariants
    ]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant0": "_unit",
                "Variant1": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant(
                        field_0=v[0], field_1=v[1]
                    )
                    if isinstance(v, list)
                    else (_ for _ in ()).throw(
                        ValueError("Expected list for tuple variant Variant1")
                    )
                ),
                "Variant2": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant(
                        **v
                    )
                ),
            },
            (
                ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant,
                ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant,
            ),
            "ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFields",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant0": (lambda r: r == "Variant0", lambda r: "Variant0"),
                "Variant1": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant,
                    ),
                    lambda r: {"Variant1": [r.field_0, r.field_1]},
                ),
                "Variant2": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant,
                    ),
                    lambda r: {"Variant2": r.model_dump(by_alias=True)},
                ),
            },
            "ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFields",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant = ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant1Variant
            TestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant = ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFieldsVariant2Variant
            TestEnumWithBasicVariantAndFieldsAndNamedFields = (
                ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFields
            )


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithBasicVariantAndFieldsAndNamedFields
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithBasicVariantAndFieldsAndNamedFields
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithBasicVariantAndFieldsAndNamedFields,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
