reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_ignored_input.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumWithDiscriminantIgnored>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnumWithDiscriminantIgnored",
      "variants": [
        {
          "name": "Variant1"
        },
        {
          "name": "Variant2"
        }
      ]
    }
  ]
}
