reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_ignored_output.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_output_schema :: < TestEnumWithDiscriminantIgnored >\n().output_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Infallible",
      "description": "Error object which is expected to be never returned",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnumWithDiscriminantIgnored",
      "variants": [
        {
          "name": "Variant1",
          "fields": "none"
        },
        {
          "name": "Variant2",
          "fields": "none"
        }
      ]
    }
  ]
}
